src/core/ir/jit/snapshots/tailcall__core__ir__jit__builder__tests__default_value.snap
---
source: src/core/ir/jit/builder.rs
expression: plan
---
ExecutionPlan {
    parent: [
        Field {
            id: 0,
            name: "createPost",
            ir: "Some(..)",
            type_of: Post,
            args: [
                Arg {
                    id: 0,
                    name: "post",
                    type_of: InputPost!,
                    value: Some(
                        Object(
                            {
                                Name(
                                    "userId",
                                ): Number(
                                    Number(123),
                                ),
                                Name(
                                    "title",
                                ): String(
                                    "tailcall",
                                ),
                                Name(
                                    "body",
                                ): String(
                                    "tailcall test",
                                ),
                            },
                        ),
                    ),
                    default_value: None,
                },
            ],
        },
        Field {
            id: 1,
            name: "id",
            type_of: ID!,
            refs: Some(
                Parent(0),
            ),
        },
    ],
    children: [
        Field {
            id: 0,
            name: "createPost",
            ir: "Some(..)",
            type_of: Post,
            args: [
                Arg {
                    id: 0,
                    name: "post",
                    type_of: InputPost!,
                    value: Some(
                        Object(
                            {
                                Name(
                                    "userId",
                                ): Number(
                                    Number(123),
                                ),
                                Name(
                                    "title",
                                ): String(
                                    "tailcall",
                                ),
                                Name(
                                    "body",
                                ): String(
                                    "tailcall test",
                                ),
                            },
                        ),
                    ),
                    default_value: None,
                },
            ],
            refs: Some(
                Children(
                    [
                        Field {
                            id: 1,
                            name: "id",
                            type_of: ID!,
                        },
                    ],
                ),
            ),
        },
    ],
}
