src/core/ir/jit/snapshots/tailcall__core__ir__jit__builder__tests__from_document.snap
---
source: src/core/ir/jit/builder.rs
expression: plan
---
ExecutionPlan {
    fields: [
        Field {
            id: 1,
            name: "posts",
            ir: "Some(..)",
            type_of: [Post],
        },
        Field {
            id: 2,
            name: "user",
            ir: "Some(..)",
            type_of: User,
            refs: Some(
                Parent(1),
            ),
        },
        Field {
            id: 3,
            name: "id",
            type_of: Int!,
            refs: Some(
                Parent(2),
            ),
        },
        Field {
            id: 4,
            name: "name",
            type_of: String!,
            refs: Some(
                Parent(2),
            ),
        },
    ],
}
