src/core/ir/jit/snapshots/tailcall__core__ir__jit__builder__tests__simple_query.snap
---
source: src/core/ir/jit/builder.rs
expression: plan
---
ExecutionPlan {
    parent: [
        Field {
            id: 0,
            name: "posts",
            ir: "Some(..)",
            type_of: [Post],
        },
        Field {
            id: 1,
            name: "user",
            ir: "Some(..)",
            type_of: User,
            refs: Some(
                Parent(0),
            ),
        },
        Field {
            id: 2,
            name: "id",
            type_of: Int!,
            refs: Some(
                Parent(1),
            ),
        },
    ],
    children: [
        Field {
            id: 0,
            name: "posts",
            ir: "Some(..)",
            type_of: [Post],
            refs: Some(
                Children(
                    [
                        Field {
                            id: 1,
                            name: "user",
                            ir: "Some(..)",
                            type_of: User,
                            refs: Some(
                                Children(
                                    [
                                        Field {
                                            id: 2,
                                            name: "id",
                                            type_of: Int!,
                                        },
                                    ],
                                ),
                            ),
                        },
                    ],
                ),
            ),
        },
        Field {
            id: 1,
            name: "user",
            ir: "Some(..)",
            type_of: User,
            refs: Some(
                Children(
                    [
                        Field {
                            id: 2,
                            name: "id",
                            type_of: Int!,
                        },
                    ],
                ),
            ),
        },
        Field {
            id: 2,
            name: "id",
            type_of: Int!,
        },
    ],
}
